--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,12 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    dependencies {
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+        implementation 'com.google.firebase:firebase-analytics:17.2.2'
+        implementation("com.google.firebase:firebase-analytics-ktx")
+    }
+    apply plugin: 'com.google.gms.google-services'
 }
 
 flutter {
